loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:13: error: 'while' expected but '}' found.
	}
        ^